added polaroids to software

--- a/src/views/Design/Design.css
+++ b/src/views/Design/Design.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
 
-    background-color: #EEEEEE;
+    background-color: #FFFFFF;
 }
 
 .design .title {
