--- a/src/Header.css
+++ b/src/Header.css
@@ -3,7 +3,7 @@
 
     display: flex;
     justify-content: flex-end;
-    background: #DDDDDD;
+    background: #b0b8d2;
 }
 
 .NavigationBar-Left {
