--- a/src/views/Dance/Dance.css
+++ b/src/views/Dance/Dance.css
@@ -50,8 +50,8 @@
     font-family: 'avenir';
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
-
+    font-size: 17px;
+    line-height: 28px;
     color: #FFFFFF;
 
     margin-bottom: 25px;
