--- a/src/views/Sigmas/Sigmas.css
+++ b/src/views/Sigmas/Sigmas.css
@@ -43,8 +43,8 @@
     font-family: 'avenir';
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
-
+    font-size: 17px;
+    line-height: 28px;
     color: #FFFFFF;
 
     margin-bottom: 50px;
